test: fix unit test failure after extractParentId change